<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bookFragment"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/books" />
    <item
        android:id="@+id/basketFragment"
        android:icon="@drawable/ic_baseline_shopping_basket_24"
        android:title="@string/basket" />
    <item
        android:id="@+id/orderFragment"
        android:icon="@drawable/ic_baseline_shopping_bag_24"
        android:title="@string/orders" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        tools:ignore="HardcodedText" />
</menu>