<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_profile_profile_progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_bottom_shape_gray"
        android:clickable="true"
        android:focusable="true"
        android:translationZ="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cv_profile_profile_card"
        app:layout_constraintEnd_toEndOf="@+id/cv_profile_profile_card"
        app:layout_constraintStart_toStartOf="@+id/cv_profile_profile_card"
        app:layout_constraintTop_toTopOf="@+id/cv_profile_profile_card">

        <ProgressBar
            android:id="@+id/pb_profile_profile_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rl_profile_description_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="0dp"
                android:text="@string/profile"
                android:textColor="#403947"
                android:textSize="10pt" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile_profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#403947"
        app:cardCornerRadius="20dp"
        app:contentPadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_profile_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_setting_full_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="250dp"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:textSize="10pt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_setting_static_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number"
                android:textColor="#9F9F9F"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_setting_full_user_name" />

            <TextView
                android:id="@+id/tv_setting_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_setting_static_phone_number" />

            <TextView
                android:id="@+id/tv_setting_static_created_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/registration_date"
                android:textColor="#9F9F9F"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_setting_phone_number" />

            <TextView
                android:id="@+id/tv_order_description_created_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_setting_static_created_date" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_top_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_profile_profile_card">

        <TextView
            android:id="@+id/tv_profile_static_text_order_list"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_list"
            android:textSize="14pt"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profile_orders_progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#A68F8F8F"
            android:clickable="true"
            android:focusable="true"
            android:translationZ="100dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/rv_profile_order_list"
            app:layout_constraintEnd_toEndOf="@+id/rv_profile_order_list"
            app:layout_constraintStart_toStartOf="@+id/rv_profile_order_list"
            app:layout_constraintTop_toTopOf="@+id/rv_profile_order_list">

            <ProgressBar
                android:id="@+id/pb_profile_orders_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginVertical="10dp"
            android:id="@+id/rv_profile_order_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@+id/btn_profile_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_static_text_order_list">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btn_profile_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#BBB11C2B"
            android:text="@string/sign_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>